--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ gradle-app.setting
 
 # Cache of project
 .gradletasknamecache
-.idea
+/.idea/
 
 # # Work around https://youtrack.jetbrains.com/issue/IDEA-116898
 # gradle/wrapper/gradle-wrapper.properties
