--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,9 @@ apply plugin: 'java'
 sourceCompatibility = 1.8
 
 dependencies {
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
+
+
     compileOnly 'org.projectlombok:lombok:1.18.12'
     annotationProcessor 'org.projectlombok:lombok:1.18.12'
 
